# mastodon_toolbox

./: .gitignore  LICENSE  README.md  config_example.ini  config_example.py  pyproject.toml  requirements.txt
mastodon_toolbox/: __main__.py  functions.py  mastodon_toolbox.py
mtb/: __main__.py  functions.py  mtb.py
web_interface/: __init__.py
web_interface/static/: main.js  style.css
web_interface/templates/: base.html  index.html  instances.html
