[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mtb"
version = "1.0.0"
authors = [{name="Tim Schatto-Eckrodt", email="tim.schatto-eckrodt@uni-hamburg.de" }]
description = "This tool is meant to facilitate the gathering and analysis of data from the Mastodon network. "
readme = "README.md"
dependencies = [
    "beautifulsoup4==4.11.1",
    "bs4==0.0.1",
    "Mastodon.py==1.8.0",
    "requests==2.28.2",
    "boltons==23.0.0",
    "tqdm==4.65.0"
]
requires-python = ">=3.9"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ['mtb*']

[project.scripts]
mtb = "mtb.mtb:main"

[project.urls]
"Homepage" = "https://github.com/Kudusch/mastodon_toolbox"
"Bug Tracker" = "https://github.com/Kudusch/mastodon_toolbox/issues"
